--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<ul>
+	<li><%= link_to "Tweets", Tweet %></li>
+	<li><%= link_to "Zombies", Zombie %></li>
+</ul>
 <%= yield %>
 
 </body>
