--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :zombie_id %><br>
     <%= f.text_field :zombie_id %>
   </div>
+  <div class="field">
+    <%= f.label :date %><br>
+    <%= f.date_select :date %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
