--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -7,7 +7,12 @@
 
 <p>
   <strong>Zombie:</strong>
-  <%= @tweet.zombie %>
+  <%= link_to @tweet.zombie, @tweet.zombie %>
+</p>
+
+<p>
+  <strong>Date:</strong>
+  <%= @tweet.date %>
 </p>
 
 <%= link_to 'Edit', edit_tweet_path(@tweet) %> |
