--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Zombie:</strong>
-  <%= link_to @tweet.zombie, @tweet.zombie %>
+  <%= link_to @tweet.zombie.name, @tweet.zombie %>
 </p>
 
 <p>
