--- a/app/views/zombies/index.html.erb
+++ b/app/views/zombies/index.html.erb
@@ -22,6 +22,7 @@
         <td><%= zombie.day_of_death %></td>
         <td><%= zombie.no_of_arms %></td>
         <td><%= zombie.description %></td>
+        <td><%= zombie.password %></td>
         <td><%= link_to 'Show', zombie %></td>
         <td><%= link_to 'Edit', edit_zombie_path(zombie) %></td>
         <td><%= link_to 'Destroy', zombie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
