--- a/app/views/zombies/_form.html.erb
+++ b/app/views/zombies/_form.html.erb
@@ -31,6 +31,14 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+  <div class="field">
+    <%= f.label :password %><br>
+    <%= f.text_field :password %>
+  </div>
+  <div class="field">
+    <%= f.label :password_confirmation %><br>
+    <%= f.text_field :password_confirmation %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
