--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
 </head>
 <body>
 <ul>
+	<% if session[:zombie_id]==nil %>
+	<li><%= link_to "Login", login_path %></li>
+	<% else %>
+	<li><%= link_to "Logout", logout_path %></li>
+	<% end %>
 	<li><%= link_to "Tweets", Tweet %></li>
 	<li><%= link_to "Zombies", Zombie %></li>
 </ul>
